[package]
name = "lora"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bitflags = "1.3.2"

embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.9" }
log = { version = "0.4.14", features = ["std"] }
thiserror = "1.0.39"
